--- a/_data/locales/ko-KR.yml
+++ b/_data/locales/ko-KR.yml
@@ -35,9 +35,9 @@ copyright:
     link: https://creativecommons.org/licenses/by/4.0/
 
   # Displayed in the footer
-  brief: 저작권
+  brief: 
   verbose: >-
-    명시되지 않는 한 이 사이트의 블로그 게시물마다 저작권 표시가 있을 수 있습니다.
+    
 
 meta: Powered by :PLATFORM with :THEME theme
 
