--- a/_data/locales/ko-KR.yml
+++ b/_data/locales/ko-KR.yml
@@ -30,12 +30,12 @@ panel:
 copyright:
   # Shown at the bottom of the post
   license:
-    template: 이 기사는 저작권자의 :LICENSE_NAME 라이센스를 따릅니다.
-    name: CC BY 4.0
-    link: https://creativecommons.org/licenses/by/4.0/
+    template: 
+    name: 
+    link: 
 
   # Displayed in the footer
-  brief: 
+  brief: copyright
   verbose: >-
     
 
