--- a/_data/locales/ko-KR.yml
+++ b/_data/locales/ko-KR.yml
@@ -36,7 +36,7 @@ copyright:
 
   # Displayed in the footer
   brief: Copyright
-  verbose: >-
+  verbose: >- Copyright
     
 
 meta: Powered by :PLATFORM with :THEME theme
