--- a/_data/locales/ko-KR.yml
+++ b/_data/locales/ko-KR.yml
@@ -10,11 +10,11 @@ layout:
 # The tabs of sidebar
 tabs:
   # format: <filename_without_extension>: <value>
-  home: 홈
-  categories: 카테고리
-  tags: 태그
-  archives: 아카이브
-  about: 정보
+  home: 홈(home)
+  categories: 카테고리(categories)
+  tags: 태그(tags)
+  archives: 아카이브(archives)
+  about: 정보(about)
 
 # the text displayed in the search bar & search results
 search:
